--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
 		"react-bootstrap": "^1.5.0",
 		"react-dom": "^16.14.0",
 		"react-polyfills": "0.0.1",
-		"react-router-dom": "^5.2.0"
+		"react-router-dom": "^5.2.0",
+		"reactstrap": "^8.9.0"
 	}
 }
